<resources>
    <string name="app_name">WKRTC</string>
    <string name="back">back</string>
    <string name="publish">Publish</string>
    <string name="unpublish">Unpublish</string>
    <string name="owt_conf">OWT CONFERENCE</string>
    <string name="server_url">server url</string>
    <string name="connect">connect</string>
    <string name="connecting">连接中…</string>
    <string name="disconnect">disconnect</string>
    <string name="settings">settings</string>
    <string name="room_id">Room Id</string>
    <string name="default_room">default room</string>
    <string name="camera_facing">Camera Facing</string>
    <string name="front">FRONT</string>
    <string name="camera_resolution">Camera Resolution</string>
    <string name="video_codec">Video Codec</string>
    <string name="sharescreen">ShareScreen</string>
    <string name="share_screen">ShareScreen</string>
    <string name="stop_screen">StopSharing</string>
    <string name="limrtc_hang_up">挂断</string>
    <string name="waiting_answer">等待接听</string>
    <string name="invite_join_call">邀请你加入语言会话</string>
    <string name="other_members">参加聊天的还有</string>
    <string name="microphone">麦克风</string>
    <string name="speaker">扬声器</string>
    <string name="camera">摄像头</string>
    <string name="switch_audio">语音通话</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="invitation_video_call">邀请你进行视频通话…</string>
    <string name="answer">接听</string>
    <string name="switch_audio_answer">切换语音接听</string>
    <string name="switch_video">切换到视频通话</string>
    <string name="mute">静音</string>
    <string name="other_refuse">对方拒绝</string>
    <string name="other_refuse_switch_video">对方拒绝切换到视频通话</string>
    <string name="video">视频</string>
    <string name="request_video_send">请求已发送，需对方同意后开启</string>
    <string name="request_video">对方请求切换到视频通话</string>
    <string name="agree">同意</string>
    <string name="cancel">取消</string>
    <string name="open_floating_desc">请开启悬浮窗权限</string>
    <string name="open">开启</string>
    <string name="open_camera_microphone">请在系统设置页面，打开摄像头和麦克风权限后在使用</string>
    <string name="rtc_go_to_setting">去设置</string>
</resources>